Rough finish of interview

--- a/assignment2/index.html
+++ b/assignment2/index.html
@@ -1,8 +1,50 @@
 <html>
     <head>
         <title>Alison</title>
+        <link href="style.css" rel="stylesheet" type="text/css">
     </head>
     <body>
-        <h1></h1>
+        <hr/>
+        <h1 style="font-family:Didot;text-align:center;font-size:50px">ALISON'S FAVORITE MOVIES</h1>
+        <hr/>
+    
+    <div align="center">
+        <img src="13.jpeg" width=300 height=400>
+    </div>
+        <hr/>
+        
+    <div align="center">
+        <p style="font-family:Avenir">
+            <a href="p2.html">What's The Time In Your World?</a>
+        </p>
+        <p style="font-family:Avenir">
+            <a href="p3.html">After The Storm</a>
+        </p>
+        <p style="font-family:Avenir">
+            <a href="p4.html">Sound Of Music</a>
+        </p>
+        <p style="font-family:Avenir">
+            <a href="p5.html">Starship Troopers</a>
+        </p>
+        <p style="font-family:Avenir">
+            <a href="p6.html">Rear Window</a></p>
+        <p style="font-family:Avenir">
+            <a href="p7.html">Forrest Gump</a>
+        </p>
+        <p style="font-family:Avenir">
+            <a href="p8.html">Memento</a>
+        </p>
+        <p style="font-family:Avenir">
+            <a href="p9.html">The Silence Of The Lambs</a>
+        </p>
+        <p style="font-family:Avenir">
+            <a href="p10.html">The Shawshank Redemption</a>
+        </p>
+    </div>
+    <div align="right">
+       <a href="p2.html">
+           <img src="forward.png" width=50>
+        </a>
+    </div>
     </body>
 </html>
