--- a/index.html
+++ b/index.html
@@ -4,16 +4,14 @@
         <link href="styles.css" rel="stylesheet" type="text/css">
     </head>
     <body>
-        <h1 style="font-family:Helvetica;text-align:center;font-size:20px">Fish's Home Page</h1>
         <hr/>
-        <p class="special">Welcome</p>
+        <p class="special">creative computing f16</p>
         <hr/>
-        <h2>Assignments</h2>
-        <ul>
-            <li>Do what results...</li>
-            <li>
-                <a href="assignment2/index.html">Interview</a>
-            </li>
-        </ul>
-        <a href="page2.html">GO to Page 2</a>
+        
+        <br/>
+            <p>Do what results</p>
+            <p>
+                <a href="assignment2/index.html" style="text-decoration:none">Interview</a>
+            </p>
 </html>
+
