--- a/assignment2/index.html
+++ b/assignment2/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Alison</title>
+        <title>Alison's Movies</title>
         <link href="style.css" rel="stylesheet" type="text/css">
     </head>
     <body>
@@ -13,7 +13,7 @@
     </div>
         <hr/>
         
-    <div align="center">
+    <div align="center" class="link">
         <p style="font-family:Avenir">
             <a href="p2.html">What's The Time In Your World?</a>
         </p>
