--- a/assignment2/p2.html
+++ b/assignment2/p2.html
@@ -18,6 +18,7 @@
 		    "But there was no one as crazy as you were."
 		</p>
 		<hr/>
+		<p style="font-family:Didot; font-size: 30px; text-align: center">ALISON SAYS:</p>
 		<p style="font-family:Avenir; font-size:24px; text-align:center">
 		    A melancholic love story: subtle reflection on time, memories, and past.
         </p>
