first CSS iteration

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
         <br/>
             <p>Do what results</p>
             <p>
-                <a href="assignment2/index.html" style="text-decoration:none">Interview</a>
+                <a href="assignment2/index.html" style="text-decoration:none" class="hover">Interview</a>
             </p>
+            <p>
+                <a href="assignment2/index.html" style="text-decoration:none">CSS Demo</a>
+                </p>
 </html>
 
