Linked to CSS Iteration

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <a href="assignment2/index.html" style="text-decoration:none" class="hover">Interview</a>
             </p>
             <p>
-                <a href="assignment2/index.html" style="text-decoration:none">CSS Demo</a>
+                <a href="cssadvanced/mycss.html" style="text-decoration:none" class="hover">CSS Demo</a>
                 </p>
 </html>
 
