--- a/cssadvanced/mycss.html
+++ b/cssadvanced/mycss.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <link href="mycss.css" rel="stylesheet" type="text/css">
-        <title>CSS</title>
+        <title>omgsoedgy</title>
     </head>
     <body>
             <div class="circle"></div>
