--- a/cssadvanced/mycss.html
+++ b/cssadvanced/mycss.html
@@ -4,11 +4,20 @@
         <title>omgsoedgy</title>
     </head>
     <body>
+         <div>
             <div class="circle"></div>
             <div id="art"></div>
             <div class="circle2"></div>
             <div id="art2"></div>
             <a href="../index.html">K bye.</a>
+        </div>
+        <div class="div2">
+            <div class="circle"></div>
+            <div id="art"></div>
+            <div class="circle2"></div>
+            <div id="art2"></div>
+            <a href="../index.html">K bye.</a>
+        </div>
     </body>
 </html>
 
