--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
                 <a href="assignment2/index.html" style="text-decoration:none" class="hover">Interview</a>
             </p>
             <p>
-                <a href="cssadvanced/mycss.html" style="text-decoration:none" class="hover">CSS Composition</a>
+                <a href="cssadvanced/mycss.html" style="text-decoration:none" class="hover">CSS Iteration 1</a>
                 </p>
+            <p>
+                <a href="cssadvanced/css2.html" style="text-decoration: none" class="hover">CSS Iteration 2</a>
+            </p>
 </html>
 
