--- a/cssadvanced/css2.html
+++ b/cssadvanced/css2.html
@@ -5,17 +5,17 @@
         <title>babies</title>
     </head>
     <body>
-             <a class="button animated rubberBand" href="heeeeeeeey.com"></a>
-             <a class="button0 animated rubberBand" href="heeeeeeeey.com"></a>
-             <a class="button0 animated rubberBand" href="heeeeeeeey.com"></a>
+             <a class="button animated rubberBand" href="http://www.staggeringbeauty.com/"></a>
+             <a class="button0 animated rubberBand" href="http://www.staggeringbeauty.com/"></a>
+             <a class="button0 animated rubberBand" href="http://burymewithmymoney.com/"></a>
              <a class="button2 animated rubberBand" href="fallingfalling.com"></a>
-             <a class="button0 animated rubberBand" href="heeeeeeeey.com"></a>
+             <a class="button0 animated rubberBand" href="http://just-shower-thoughts.tumblr.com/"></a>
              <a class="button3 animated rubberBand" href="http://endless.horse/"></a>
-             <a class="button0 animated rubberBand" href="heeeeeeeey.com"></a>
-             <a class="button0 animated rubberBand" href="heeeeeeeey.com"></a>
+             <a class="button0 animated rubberBand" href="http://www.rrrgggbbb.com/"></a>
+             <a class="button0 animated rubberBand" href="http://beesbeesbees.com/"></a>
              <a class="button4 animated rubberBand" href="http://ducksarethebest.com/"></a>
-             <a class="button0 animated rubberBand" href="heeeeeeeey.com"></a>
-             <a class="button0 animated rubberBand" href="heeeeeeeey.com"></a>
-            <a class="button0 animated rubberBand" href="heeeeeeeey.com"></a>
+             <a class="button0 animated rubberBand" href="http://eelslap.com/"></a>
+             <a class="button0 animated rubberBand" href="http://www.koalastothemax.com/"></a>
+            <a class="button0 animated rubberBand" href="http://www.partridgegetslucky.com/"></a>
     </body>
 </html>
