--- a/cssadvanced/css2.html
+++ b/cssadvanced/css2.html
@@ -17,5 +17,10 @@
              <a class="button0 animated rubberBand" href="http://eelslap.com/"></a>
              <a class="button0 animated rubberBand" href="http://www.koalastothemax.com/"></a>
             <a class="button0 animated rubberBand" href="http://www.partridgegetslucky.com/"></a>
+            
+            
+            <br>
+            <embed src="disgusting.mp3" autostart="true" loop="true"
+width="300" height="50"></embed>
     </body>
 </html>
