--- a/cssadvanced/css2.html
+++ b/cssadvanced/css2.html
@@ -20,7 +20,6 @@
             
             
             <br>
-            <embed src="disgusting.mp3" autostart="true" loop="true"
-width="300" height="50"></embed>
+            <embed src="disgusting.mp3" autostart="true" loop="true" width="30" height="50"></embed>
     </body>
 </html>
