--- a/index.html
+++ b/index.html
@@ -19,5 +19,8 @@
             <p>
                 <a href="cssadvanced/css2.html" style="text-decoration: none" class="hover">CSS Iteration 2</a>
             </p>
+            <p>
+                <a href="css3/instructions.html" style="text-decoration: none" class="hover">CSS Iteration 3</a>
+            </p>
 </html>
 
