made fourth iteration

--- a/index.html
+++ b/index.html
@@ -22,5 +22,8 @@
             <p>
                 <a href="css3/instructions.html" style="text-decoration: none" class="hover">CSS Iteration 3</a>
             </p>
+            <p>
+                <a href="css4/css4.html" style="text-decoration: none" class="hover">CSS Iteration 4</a>
+            </p>
 </html>
 
