--- a/index.html
+++ b/index.html
@@ -25,5 +25,14 @@
             <p>
                 <a href="css4/css4.html" style="text-decoration: none" class="hover">CSS Iteration 4</a>
             </p>
+            <p>
+                <a href="jquery_exercise/index.html" style="text-decoration: none" class="hover">JQuery Exercise</a>
+            </p>
+            <p>
+                <a href="html5/index.html" style="text-decoration: none" class="hover">JS Iteration 1</a>
+            </p>
+            <p>
+                <a href="iteration2/index.html" style="text-decoration: none" class="hover">JS Iteration 2</a>
+            </p>
 </html>
 
