--- a/index.html
+++ b/index.html
@@ -34,5 +34,8 @@
             <p>
                 <a href="iteration2/index.html" style="text-decoration: none" class="hover">JS Iteration 2</a>
             </p>
+            <p>
+                <a href="catalog/index.html" style="text-decoration: none" class="hover">Catalog</a>
+            </p>
 </html>
 
